<resources>
    <string name="app_name">Demo</string>

    <!-- Авторизация -->

    <string name="activity_main_title">
        Добро пожаловать\n
        в Харьков
    </string>

    <string name="activity_main_text">
    Приложение для связи жителей города\n
    с администрацией для улучшения их\n
    жизни в городе
    </string>

    <string name="activity_main_email_Hint">Email</string>

    <string name="activity_main_password_Hint">Password</string>

    <string name="activity_main_remind">Напомнить пароль?</string>

    <string name="activity_main_btn_auth">Авторизация</string>

    <string name="activity_main_btn_auth_fb">Continue with Facebook</string>

    <string name="activity_main_btn_entity">Продолжить без авторизации</string>

    <string name="activity_main_btn_reg">Ещё нет аккаунта? Создать сейчас</string>

    <string name="activity_main_content_description">Кнопка</string>

    <!-- Новости -->
    <string name="activity_news_news_map_description">Иконка карты</string>

    <string name="activity_news_menu_description">Иконка меню</string>

    <string name="activity_news_news_text_view">Новости</string>

    <string name="activity_news_frash_text_view">Свежее</string>

    <string name="activity_news_hot_text_view">Горячее</string>

    <!-- Фрагмент свежих новостей -->
    <string name="fresh_news_list_item_image_description">Изображение</string>

    <string name="fresh_news_list_item_news_date">16 апреля 2020 г</string>

    <string name="fresh_news_list_item_news_text">В Харькове возле Благовещенского соб...</string>

    <!-- Карта -->

    <string name="activity_map_title_text_view">Карта</string>

    <string name="activity_map_find_Hint">Найти улицу</string>

    <string name="activity_map_problem_text">
        Нашли проблему?\nСообщите нам о ней
    </string>

    <string name="activity_map_btn_description">Кнопка</string>




</resources>
