<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_1"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/background_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/activity_main_content_description"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/background_3" />

            <TextView
                android:id="@+id/title_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/activity_main_title"
                android:textSize="26sp"
                android:typeface="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/activity_main_text"
                android:textSize="16sp"
                android:typeface="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_main" />


            <EditText
                android:id="@+id/email_edit_main"
                android:layout_width="381dp"
                android:layout_height="39dp"
                android:layout_marginTop="15dp"
                android:autofillHints="username"
                android:ems="10"
                android:hint="@string/activity_main_email_Hint"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_main" />

            <EditText
                android:id="@+id/pass_edit_main"
                android:layout_width="381dp"
                android:layout_height="39dp"
                android:layout_marginTop="30dp"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/activity_main_password_Hint"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_edit_main" />

            <TextView
                android:id="@+id/btn_remind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/activity_main_remind"
                android:textSize="12sp"
                android:typeface="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.946"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pass_edit_main" />

            <TextView
                android:id="@+id/btn_auth_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/btn_aut"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingTop="21dp"
                android:paddingEnd="16dp"
                android:paddingBottom="20dp"
                android:text="@string/activity_main_btn_auth"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pass_edit_main"/>

            <TextView
                android:id="@+id/btn_fb_auth_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/btn_fb_aut"
                android:drawableStart="@drawable/fb"
                android:drawablePadding="7dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingTop="21dp"
                android:paddingEnd="16dp"
                android:paddingBottom="20dp"
                android:text="@string/activity_main_btn_auth_fb"
                android:textColor="#192A3E"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_auth_main" />

            <TextView
                android:id="@+id/btn_entity_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/btn_entity"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingTop="21dp"
                android:paddingEnd="16dp"
                android:paddingBottom="20dp"
                android:text="@string/activity_main_btn_entity"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_fb_auth_main" />

            <TextView
                android:id="@+id/btn_reg_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/activity_main_btn_reg"
                android:textSize="14sp"
                android:typeface="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_entity_main" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>